kubernetes/monitoring/monitoring/manifests/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  annotations:
    external-dns.kubernetes.io/target: 192.168.10.20
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`grafana.kalexlab.xyz`)
      services:
        - name: monitoring-grafana
          port: 80
  tls:
    secretName: grafana-ingress-certificate
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus
  annotations:
    external-dns.kubernetes.io/target: 192.168.10.20
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`prometheus.kalexlab.xyz`)
      middlewares:
        - name: authelia-forward-auth
          namespace: sso
      services:
        - name: monitoring-kube-prometheus-prometheus
          port: 9090
  tls:
    secretName: prometheus-ingress-certificate
